--- a/mycss.css
+++ b/mycss.css
@@ -54,7 +54,6 @@
 
     /* Tabs background now matches top-section */
     .nav-tabs {
-      /* background-color: #d0f0c0;  same green */
       border-bottom: 2px solid black !important;
       padding-left: 140px;
       position: relative;
@@ -119,9 +118,55 @@
       position: absolute;    /* makes z‑index effective */
       top: 1px;
       left: 0px;
-      z-index: 3;           /* higher = on top */
+      z-index: 1;           /* lower */
       width: auto;
       height: 160px;
       margin-left: 1rem;     /* breathing room */
     }
 
+@media screen and (max-width: 480px) {
+    h2.title {
+      
+      font-size: 32pt;
+      padding-top: 1.25rem;
+      padding-left: 100px;
+      height:60px;
+      color: #000;
+      margin-bottom: 1.5rem;
+      text-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
+    }
+
+    .nav-tabs {
+      border-bottom: 2px solid black !important;
+      padding-left: 0px;
+      z-index: 2;
+    }
+
+   .nav-tabs .nav-link {
+      font-family: 'Roboto', sans-serif;
+      border-radius: 5px 5px 0 0;
+      width: 60px;
+      text-align: center;
+      white-space: nowrap;
+      color: #222; /* darker text */
+      text-shadow: 0 0 3px rgba(255, 255, 255, 0.8);
+      border: 1px solid transparent;
+      font-size: 1rem;
+      padding-left:1px;
+      padding-right:1px;
+      margin:0;
+    }
+
+   .logo {
+      float: left;          /* take it out of normal flow */
+      position: absolute;    /* makes z‑index effective */
+      top: 2px;
+      left: 0px;
+      z-index: 1;           /* higher = on top */
+      width: auto;
+      height: 105px;
+      margin-left: 1rem;     /* breathing room */
+    }
+
+
+}
