--- a/mycss.css
+++ b/mycss.css
@@ -7,7 +7,7 @@
     .container-fluid {
       display: flex;
       flex-direction: column;
-      height: 100vh; /* full viewport height */
+      height: 100dvh; /* full viewport height */
       padding-left: 0;
       padding-right: 0;
     }
