--- a/css/mycss.css
+++ b/css/mycss.css
@@ -21,7 +21,7 @@
     .container-fluid {
       display: flex;
       flex-direction: column;
-      height: 100svh; /* full viewport height */
+      height: 100svh; /* small viewport height */
       padding-left: 0;
       padding-right: 0;
     }
@@ -200,8 +200,10 @@
       text-align:center;
       font-size: 20pt;
       padding-top: 2px;
+      padding-left:0;
+      padding-right:0;
       color: #000;
-      margin: auto;
+      margin: 0;
       text-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
       z-index:1;
     }
