--- a/css/mycss.css
+++ b/css/mycss.css
@@ -1,7 +1,8 @@
     :root {
       --box-height: 100px;
       --box-width-2col: 50%;
-      --box-width-3col: 33.33%;
+      --box-width-2colb: 66.6%;
+      --box-width-3col: 33.3%;
       --box-bottom-margin:12px;
       --title-width: 100%;
 
@@ -18,6 +19,13 @@
       margin: 0;
       overscroll-behavior: none; /* Safari 16.4+, Chrome, Firefox      */
       overflow: hidden;          /* fallback for ancient Safari (<15)  */
+    }
+
+    object{
+      flex: 1 1 auto;
+      width: 100%;
+      height: 100%;
+      border: none;
     }
 
     .container-fluid {
@@ -115,6 +123,14 @@
       color: #000;
       z-index:4;
     }
+    
+    .tab-pane {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      height: 100%; /* necessary when inside flex parent */
+    }
+
 
     /* Content below tabs */
     .bottom-section {
@@ -125,6 +141,9 @@
       padding: 1rem;
       flex-grow: 1; /* fill remaining space */
       overflow-y: auto; /* scroll if content is too tall */
+      display: flex;
+      flex-direction: column;
+
     }
 
     #musicToggle {
@@ -161,6 +180,22 @@
       padding: 1px 4px;
       margin-bottom:var(--box-bottom-margin);
     }
+
+    .content-2colb {
+      /*border-radius: 5px;*/
+      /*border:1px black solid;*/
+      /*background-color: rgba(144, 238, 144, 0.5);*/
+      min-height: var(--box-height);
+      float: left;
+      width: var(--box-width-2colb);
+      padding: 1px 4px;
+      margin-bottom:var(--box-bottom-margin);
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      height:100%;
+    }
+
 
    .content-3col {
       /*border-radius: 5px;*/
@@ -238,7 +273,11 @@
       width: auto;
     }
 
-    .content-2col, .content-3col {
+    .content-2col, .content-2colb, .content-3col {
       width: 100%;
+    }
+
+    .content-2colb{
+      /*height: 100%;*/
     }
 }
