--- a/css/mycss.css
+++ b/css/mycss.css
@@ -1,7 +1,7 @@
     :root {
       --box-height: 100px;
-      --box-width-2col: 49%;
-      --box-width-2colb: 49%;
+      --box-width-2col: 66.6%;
+      --box-width-2colb: 66.6%;
       --box-width-3col: 33.3%;
       --box-bottom-margin:12px;
       --title-width: 100%;
@@ -21,7 +21,7 @@
       overflow: hidden;          /* fallback for ancient Safari (<15)  */
     }
 
-    object{
+    object, iframe{
       flex: 1 1 auto;
       width: 100%;
       height: 100%;
@@ -170,6 +170,8 @@
 
     }
 
+  
+
   .content-2col {
       /*border-radius: 5px;*/
       /*border:1px black solid;*/
@@ -179,8 +181,6 @@
       width: var(--box-width-2col);
       padding: 1px 4px;
       margin-bottom:var(--box-bottom-margin);
-     
-
     }
 
     .content-2colb {
@@ -188,7 +188,7 @@
       /*border:1px black solid;*/
       /*background-color: rgba(144, 238, 144, 0.5);*/
       min-height: var(--box-height);
-      float: right;
+      float: left;
       width: var(--box-width-2colb);
       padding: 1px 4px;
       margin-bottom:var(--box-bottom-margin);
@@ -208,6 +208,10 @@
       width: var(--box-width-3col);
       padding: 1px 4px;
       margin-bottom:var(--box-bottom-margin);
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      /*height:100%;*/
     }
 
     .boxtitle {
@@ -217,7 +221,7 @@
       font-size:16pt;
       top:0px;
       border:1px solid black;
-      border-radius:5px;
+      border-radius:5px 5px 0px 0px;
       background:black;
       color:white;
       width:var(--title-width);
@@ -280,6 +284,6 @@
     }
 
     .content-2colb{
-      /*height: 100%;*/
+      padding-bottom: 1em;
     }
 }
