--- a/css/mycss.css
+++ b/css/mycss.css
@@ -204,7 +204,7 @@
       display: flex;
       flex-direction: column;
       flex-grow: 1;
-      height:100%;
+      /*height:100%;*/
     }
 
     .boxtitle {
