--- a/css/mycss.css
+++ b/css/mycss.css
@@ -48,7 +48,7 @@
       background-repeat: no-repeat;
       background-position: right;
       background-size: contain;
-      font-family: 'Roboto', sans-serif;
+      /*font-family: 'Roboto', sans-serif;*/
       font-weight: 500;
       /*font-size: 1.2rem;*/
       color: #ff0000;
